added documentation for connecting triple junctures

--- a/notebooks/tutorials/network_sediment_transporter/create_network_from_raster.ipynb
+++ b/notebooks/tutorials/network_sediment_transporter/create_network_from_raster.ipynb
@@ -368,11 +368,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add connectivity at triple junctures:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#extract channel start and end nodes so we can \n",
     "channel_start_nodes = np.array([n1 for (n1, n2) in profiler.data_structure[ws_keys[0]].keys()])\n",
     "channel_end_nodes = np.array([n2 for (n1, n2) in profiler.data_structure[ws_keys[0]].keys()])\n",
     "\n",
@@ -383,15 +391,23 @@
     "links_per_segment = np.array(nodes_per_segment.copy())\n",
     "for i in range(n_channel_segs):\n",
     "    #if channel end nodes do not exist in starting nodes, they must be channel heads\n",
+    "    #channel heads will not be linked to the rest of the network so let's adjust our number of links accordingly\n",
     "    if not np.any(channel_end_nodes[i] == channel_start_nodes):\n",
     "        #subract a link if channel head\n",
     "        links_per_segment[i] -= 1\n",
     "\n",
+    "#iterate through channel segs to add link connections at appropriate nodes\n",
     "for seg in range(n_channel_segs):\n",
+    "    #create array that functions as cumulative index of nodes in every channel segment\n",
     "    node_ids = np.cumsum(links_per_segment)\n",
+    "    #check if a channel segment end node exists in the start of any other node\n",
     "    if channel_end_nodes[seg] in channel_start_nodes:\n",
+    "        #find the first place where this is equal\n",
     "        first_id_equal = np.where(channel_end_nodes[seg] == channel_start_nodes)[0][0]\n",
+    "        #figure out how many segments ahead this is \n",
+    "        #(also currently need to subtract 1 since my node_ids don't start at zero, should make this more clean, by inserting zero at beginning)\n",
     "        id_up = first_id_equal - seg - 1\n",
+    "        #use 'id_up' to access the correct node to link the end of a triple-juncture segment to the nearest upstream node\n",
     "        links.append((node_ids[seg] - 1, node_ids[seg+id_up]))"
    ]
   },
