--- a/notebooks/tutorials/network_sediment_transporter/create_networkgrid_from_rastergrid.ipynb
+++ b/notebooks/tutorials/network_sediment_transporter/create_networkgrid_from_rastergrid.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3e11e39a",
+   "id": "3820f6b7",
    "metadata": {},
    "source": [
     "## Create A Network Grid from Raster Grid\n",
     "\n",
-    "This notebook demonstrates how to extract a Netw"
+    "This notebook demonstrates how to extract a NetworkModelGrid from a RasterModelGrid using the 'create_network_from_raster' function"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8915724a",
+   "id": "474a2521",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25ba1878",
+   "id": "3eab0372",
    "metadata": {},
    "source": [
     "## Import a DEM\n",
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8bd67782",
+   "id": "a681e383",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bdd07ed",
+   "id": "ab6a06a0",
    "metadata": {},
    "source": [
     "## Create a Raster Model Grid\n",
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "605501bb",
+   "id": "ce94cdfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0448cdc0",
+   "id": "f8b18866",
    "metadata": {},
    "source": [
     "Visualize Basin topography"
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1aa8e1e8",
+   "id": "f3df58bf",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb7ce67d",
+   "id": "ae6ae91c",
    "metadata": {},
    "source": [
     "## Create  a Network Model Grid\n",
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "337f21cb",
+   "id": "3204554c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d3aa6bc",
+   "id": "86d87501",
    "metadata": {},
    "source": [
     "## Let's plot our network"
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cb375803",
+   "id": "4c9d002a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "720a6567",
+   "id": "564881ee",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "03399ce1",
+   "id": "91cb9671",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cbcfdd4",
+   "id": "4c243e17",
    "metadata": {},
    "outputs": [],
    "source": []
